--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -1,2 +1,13 @@
-h1 Tasks#new
-p Find me in app/views/tasks/new.html.slim
+h1 New Task
+.nav.justify-content-end
+    = link_to 'tasks', tasks_path, class: 'nav-link'
+
+= form_with model: @task, local: true do |f|
+    .form-group
+        = f.label :name
+        = f.text_field :name, class: 'form-control', id: 'task_name'
+    .form-group
+        = f.label :discription
+        = f.text_area :discription, rows: 5, class:  'form-control', id: 'task_discription'
+    = f.submit nil, class: 'btmn btn-primary'
+
