--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,2 +1,20 @@
-h1 タスク一覧
-= link_to 'DO!!', new_task_path, class: 'btn btn-primary'
+h1 😎Tasks😎
+
+= link_to 'DO!!💪', new_task_path, class: 'btn btn-primary'
+
+.mb-3
+table.table.table-hover
+    thead.thead-default
+        tr
+            th= Task.human_attribute_name(:name)
+            th= Task.human_attribute_name(:created_at)
+            th    
+    tbody
+        - @tasks.each do |task|
+            tr
+                td= link_to task.name, task
+                td= task.created_at
+                td
+                    = link_to '✂️ edit ✂️', edit_task_path(task), class: 'btn btn-primary mr-3'
+                    = link_to '😈 delete 😈', task, method: :delete, data: { confirm: " Are you sure ? delete [#{task.name}] !" }, class: 'btn btn-danger'
+
