--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,4 +11,7 @@ html
     .app-title.navbar.navbar-expand-md.navbar-light.bg-light
         .navbar-brand Taskleaf
     .container
+        - if flash.notice.present?
+            .alert.alert-success= flash.notice
     = yield
+
