--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -1,2 +1,25 @@
-h1 Tasks#show
-p Find me in app/views/tasks/show.html.slim
+h1 📝 Detail 📖
+
+.nav.justify-content-end
+    = link_to 'tasks📚', tasks_path, class: 'nav-link'
+table.table.table-hover
+    tbody
+        tr
+            th= Task.human_attribute_name(:id)
+            td= @task.id
+        tr
+            th= Task.human_attribute_name(:name)
+            td= @task.name
+        tr
+            th= Task.human_attribute_name(:description)
+            td= simple_format(h(@task.description), {}, sanitize: false, wrapper_tag: "div")
+        tr
+            th= Task.human_attribute_name(:created_at)
+            td= @task.created_at
+        tr
+            th= Task.human_attribute_name(:updated_at)
+            td= @task.updated_at
+
+= link_to '✂️ edit ✂️ ', edit_task_path, class: 'btn btn-primary mr-3'
+= link_to '😈 delete 😈', @task, method: :delete, data: { confirm: " Are you sure ? delete [#{@task.name}] !" }, class: 'btn btn-danger'
+
