--- a/app/views/admin/users/new.html.slim
+++ b/app/views/admin/users/new.html.slim
@@ -1,7 +1,7 @@
 h1 🏃‍♀️ Add User 🏃‍♀️
 
-.nav .justify-content-end
-    =link_to 'USERS', admin_users_path, class: 'nav-link'
+.nav.justify-content-end
+    = link_to '🐻 USERS 🐻', admin_users_path, class: 'nav-link'
 
 = render partial: 'form', locals: { user: @user }
 
