--- a/app/views/admin/users/show.html.slim
+++ b/app/views/admin/users/show.html.slim
@@ -1,2 +1,29 @@
-h1 Admin::Users#show
-p Find me in app/views/admin/users/show.html.slim
+h1 🗽 DETAIL 🗽
+
+.nav.justify-content-end
+    = link_to '🐻 Users 🐻', admin_users_path, class: 'nav-llink'
+table.table.table-hover
+    tbody
+        tr
+            th= User.human_attribute_name(:id)
+            td= @user.id
+        tr
+            th= User.human_attribute_name(:name)
+            td= @user.name
+        tr
+            th= User.human_attribute_name(:email)
+            td= @user.email
+        tr
+            th= User.human_attribute_name(:admin)
+            td=@user.admin? ? 'yes' : 'no'
+        tr
+            th= User.human_attribute_name(:created_at)
+            td= @user.created_at
+        tr
+            th= User.human_attribute_name(:updated_at)
+            td= @user.updated_at
+
+= link_to 'EDIT', edit_admin_user_path, class: 'btn btn-primary mr-3'
+= link_to 'DELETE', [:admin, @user], method: :delete, data: { confirm: "Are you sure? Delete #{ @user.name } 😮" }, class: 'btn btn-danger'
+
+        
