--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,8 +10,17 @@ html
   body
     .app-title.navbar.navbar-expand-md.navbar-light.bg-light
         .navbar-brand Taskleaf
+    
+        ul.navbar-nav.ml-auto
+            - if current_user
+                li.nav-item= link_to 'Tasks', tasks_path, class: 'nav-link'
+                - if current_user.admin?
+                    li.nav-item= link_to 'Users', admin_users_path, class: 'nav-link'
+                li.nav-item= link_to 'Logout', logout_path, method: :delete, class: 'nav-link'
+            - else
+                li.nav-item= link_to 'Login', login_path, class: 'nav-link'
     .container
         - if flash.notice.present?
-            .alert.alert-success= flash.notice
-    = yield
+            .alert.alert-success= flash.notice 
+        = yield
 
