--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -8,7 +8,7 @@
         = f.label :name, '👀 NAME 👀'
         = f.text_field :name, class: 'form-control'
     .form-group
-        = f.label :email, '💌 EMAIL 💌'
+        = f.label :email, 'email'
         = f.text_field :email, class: 'form-control'
     .form-check
         = f.label :admin, class: 'form-check-label' do
