--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -10,5 +10,9 @@
     .form-group
         = f.label :description
         = f.text_area :description, rows: 5, class:  'form-control', id: 'task_description'
+    .form-group
+        = f.label :image
+        = f.file_field :image, class: 'form-control'
     = f.submit nil, class: 'btmn btn-primary'
+
     
