--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -2,17 +2,6 @@ h1 💠 New Task 💠
 
 .nav.justify-content-end
     = link_to 'tasks', tasks_path, class: 'nav-link'
-- if @task.errors.present?
-  ul#error_explanation
-    - @task.error.full_message.each do |message|
-      li= message
 
-= form_with model: @task, local: true, url: confirm_new_task_path do |f|
-  .form-group
-    = f.label :name
-    = f.text_field :name, class: 'form-control', id: 'task_name'
-  .form-group
-    = f.label :description
-    = f.text_area :description, rows: 5, class: 'form-control', id: 'task_description'
-  = f.submit '確認', class: 'btn btn-primary'
+= render partial: 'form', locals: { task: @task }
 
