--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -15,6 +15,10 @@ h1 😎Tasks😎
 = link_to '新規作成💪', new_task_path, class: 'btn btn-primary'
 
 .mb-3
+  = paginate @tasks
+  = page_entries_info @tasks
+
+.mb-3
 table.table.table-hover
     thead.thead-default
         tr
