--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -32,7 +32,7 @@ table.table.table-hover
                 td= task.created_at
                 td
                     = link_to '✂️ edit ✂️', edit_task_path(task), class: 'btn btn-primary mr-3'
-                    = link_to '😈 delete 😈', task, method: :delete, data: { confirm: " Are you sure ? delete [#{task.name}] !" }, class: 'btn btn-danger'
+                    = link_to '😈 delete 😈', task, method: :delete, remote: true, data: { confirm: " Are you sure ? delete [#{task.name}] !" }, class: 'btn btn-danger delete'
 
 = link_to 'エクスポート', tasks_path(format: :csv), class: 'btn btn-primary mb-3'
 
